src/test/deca/syntax/valid/created/testOpArith/times.deca
// Description :
//    Test d'une opération de multiplication
//
// Résultats :
//    ok


{
    int x = 1;
    int y = 3;
    int mult = x * y;
}


